# data-layout-benchmarks

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  benchmarks.h  clustering.ipynb  datastructures.h  generate_dataset.py  generate_datastructures.py  main.cpp  particle.spec  plot_results.py  run_in_batches.sh  struct_transformer.h  test.cpp  test.h  transformations.h  utils.h
docker/: Dockerfile
